# BI-agent

./: .gitignore  Makefile  README.md
apps/agent/: .env.example  .gitignore  README.md  pyproject.toml
apps/agent/app/: cache.py  main.py
apps/agent/app/api/: billing.py  connectors.py  health.py  n8n_webhooks.py  oauth.py  query.py  stripe_webhooks.py  upload.py  workflows.py
apps/agent/app/config/: settings.py
apps/agent/app/connectors/: __init__.py  base.py  csv_upload.py  gmail.py  google_auth.py  google_sheets.py  mock.py  notion.py
apps/agent/app/db/: crud.py  engine.py  models.py  plan_crud.py
apps/agent/app/graph/: builder.py  message_utils.py  state.py
apps/agent/app/graph/nodes/: action.py  analyst.py  planner.py  retriever.py  summarizer.py
apps/agent/app/llm/: __init__.py
apps/agent/app/middleware/: auth.py  gating.py  rate_limit.py
apps/agent/app/observability/: __init__.py
apps/agent/app/schemas/: query.py
apps/agent/app/upload/: parser.py  storage.py
apps/agent/tests/evals/: golden_pairs.json  test_pipeline.py
apps/agent/tests/unit/: test_analyst.py  test_graph_smoke.py  test_planner.py  test_retriever.py  test_summarizer.py
apps/n8n/: import.sh
apps/n8n/workflows/: data_change_alert.json  scheduled_report.json
apps/web/: package-lock.json  package.json
apps/web/src/: middleware.ts  proxy.ts
docs/: PLAN.md  errors.md
docs/adr/: 0001-split-agent-and-web.md  0002-scheduling-backend.md  0003-auth-provider.md  0004-deploy-target.md  0005-stripe-vs-manual-billing.md
docs/diagrams/: architecture.md
infra/db/: alembic.ini
infra/docker/: agent.Dockerfile  docker-compose.yml  web.Dockerfile
(+15 files in other folders)
