[project]
name = "bi-agent"
version = "0.1.0"
description = "AI Business Intelligence Agent - LangGraph multi-agent pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "anthropic>=0.39.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    # Phase 2: real connectors + cache
    "redis>=5.0.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "notion-client>=2.2.0",
    "alembic>=1.14.0",
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "stripe>=10.0.0",
    "greenlet>=3.4.0",
    "pandas>=3.0.2",
    "openpyxl>=3.1.5",
    "pypdf>=6.10.2",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.27",
    "pillow>=12.2.0",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
